--- a/research-consultancy.html
+++ b/research-consultancy.html
@@ -26,24 +26,16 @@
                 <a href="index.html">
                     <img src="img/resources/logo.png" alt="Awesome Logo">
                 </a>
-                <span class="header-heading">Structural Glass Research and Testing </span>
+                <span class="header-heading">Structural Glass Research and Testing (SGRT) Facility </span>
             </div>
             <div class="top-info pull-right">
                 <ul>
                     <li class="single-info-box">
-                        <div class="icon-holder">
+                        <!-- <div class="icon-holder">
                             <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
-                        </div>
+                        </div> -->
                         <div class="text-holder">
-                            <p><span>Call Us:</span> +(91) 94445 35309<br></p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="social-links">
-                            <ul>
-                                <li><a href="mailto:sgrt.iitm@gmail.com" target="_blank"><i class="fa fa-google-plus"
-                                            aria-hidden="true"></i></a></li>
-                            </ul>
+                            <p><span>Call Us:</span> +(91) 94445 35309 <br><span>Mail Us:</span> sgrt.iitm@gmail.com</p>
                         </div>
                     </li>
                 </ul>
@@ -73,8 +65,8 @@
                                     <li><a href="about.html">About</a></li>
                                     <li class="current dropdown"><a href="services.html">Services</a>
                                         <ul>
-                                            <li><a href="chemical-research.html">Testing Facilities</a></li>
-                                            <li><a href="agri-processing.html">Research & Consultancy</a></li>
+                                            <li><a href="testing-facilities.html">Testing Facilities</a></li>
+                                            <li><a href="research-consultancy.html">Research & Consultancy</a></li>
                                             <li><a href="training-industrial-visit-awareness.html">Training</a></li>
                                         </ul>
                                     </li>
@@ -256,7 +248,15 @@
                                     <span class="flaticon-technology-1"></span>
                                 </div>
                                 <div class="content-holder">
-                                    <p><span>Call Us:</span> 044 - 22575309 sgrt.iitm@gmail.com</p>
+                                    <p><span>Call Us:</span> 044 - 22575309</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon-holder">
+                                    <img src="img/resources/mail.svg" width="24" height="24">
+                                </div>
+                                <div class="content-holder">
+                                    <p><span>Mail Us:</span> sgrt.iitm@gmail.com</p>
                                 </div>
                             </li>
                             <li>
@@ -267,14 +267,6 @@
                                     <p><span>Mobile:</span> +(91) 9444535309</p>
                                 </div>
                             </li>
-                            <!-- <li>
-                                <div class="icon-holder">
-                                    <span class="flaticon-clock"></span>
-                                </div>
-                                <div class="content-holder">
-                                    <p><span>Mon - Sat Day:</span> 10.00 - 18.00 Sunday Closed</p>
-                                </div>
-                            </li> -->
                         </ul>
                     </div>
                 </div>
