--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
                 <a href="index.html">
                     <img src="img/resources/logo.png" alt="Awesome Logo">
                 </a>
-                <span class="header-heading">Structural Glass Research and Testing </span>
+                <span class="header-heading">Structural Glass Research and Testing (SGRT) Facility </span>
             </div>
             <div class="top-info pull-right">
                 <ul>
@@ -39,21 +39,11 @@
                     </div>
                 </li> -->
                     <li class="single-info-box">
-                        <div class="icon-holder">
+                        <!-- <div class="icon-holder">
                             <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
-                        </div>
+                        </div> -->
                         <div class="text-holder">
-                            <p><span>Call Us:</span> +(91) 94445 35309<br></p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="social-links">
-                            <ul>
-                                <!-- <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li> -->
-                                <li><a href="mailto:sgrt.iitm@gmail.com" target="_blank"><i class="fa fa-google-plus"
-                                            aria-hidden="true"></i></a></li>
-                            </ul>
+                            <p><span>Call Us:</span> +(91) 94445 35309 <br><span>Mail Us:</span> sgrt.iitm@gmail.com</p>
                         </div>
                     </li>
                 </ul>
@@ -335,20 +325,20 @@
                             </li>
                             <li>
                                 <div class="icon-holder">
+                                    <img src="img/resources/mail.svg" width="24" height="24">
+                                </div>
+                                <div class="content-holder">
+                                    <p><span>Mail Us:</span> sgrt.iitm@gmail.com</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="icon-holder">
                                     <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
                                 </div>
                                 <div class="content-holder">
                                     <p><span>Mobile:</span> +(91) 9444535309</p>
                                 </div>
                             </li>
-                            <!-- <li>
-                                <div class="icon-holder">
-                                    <span class="flaticon-clock"></span>
-                                </div>
-                                <div class="content-holder">
-                                    <p><span>Mon - Sat Day:</span> 10.00 - 18.00 Sunday Closed</p>
-                                </div>
-                            </li> -->
                         </ul>
                     </div>
                 </div>
