--- a/testing-facilities.html
+++ b/testing-facilities.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="logo pull-left">
                 <a href="index.html">
-                    <img src="img/resources/logo.png" alt="Awesome Logo">
+                    <img class="header-image" src="img/project/logo.png" alt="Awesome Logo">
                 </a>
                 <span class="header-heading">Structural Glass Research and Testing (SGRT) Facility </span>
             </div>
@@ -154,7 +154,7 @@
                                 </li>
                             </ul>
                             <div class="button">
-                                <a class="thm-btn yellow-bg" href="#" target="_blank">Get Price</a>
+                                <a class="thm-btn yellow-bg" href="#" target="_blank">Apply For Testing</a>
                             </div>
                         </div>
                         <!--End single sidebar item-->
@@ -496,13 +496,13 @@
                     <div class="single-footer-widget pd-bottom">
                         <div class="footer-logo">
                             <a href="index.html">
-                                <img src="img/footer/footer-logo.png" alt="Awesome Footer Logo">
+                                <img src="img/project/logo.jpeg" alt="Awesome Footer Logo">
                             </a>
                         </div>
                         <div class="industry-info">
                             <p class="text-justify">Structural Glass Research and Testing (SGRT) Facility, a joint
                                 initiative of Indian
-                                Institute of Technology (IITM) and Glazing Society of India (GSI) is an advanced, first
+                                Institute of Technology (IIT-M) and Glazing Society of India (GSI) is an advanced, first
                                 of its kind facility established at the Structural Engineering laboratory, Department of
                                 Civil Engineering in IIT Madras, Chennai, India.</p>
                         </div>
