--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="logo pull-left">
                 <a href="index.html">
-                    <img src="img/resources/logo.png" alt="Awesome Logo">
+                    <img class="header-image" src="img/project/logo.png" alt="Awesome Logo">
                 </a>
                 <span class="header-heading">Structural Glass Research and Testing (SGRT) Facility </span>
             </div>
@@ -148,7 +148,7 @@
                                 excellence.</p>
                             <div class="button">
                                 <a class="thm-btn yellow-bg" href="testing-facilities.html">Read More</a>
-                                <a class="thm-btn our-solution" href="#">Get Price</a>
+                                <a class="thm-btn our-solution" href="#">Apply For Testing</a>
                             </div>
                         </div>
                     </div>
@@ -267,8 +267,8 @@
                                 <span class="flaticon-sign"></span>
                             </div>
                             <div class="content">
-                                <h2>Our History</h2>
-                                <p>Defening Milestones</p>
+                                <h2>Milestones</h2>
+                                <p>Future Goals</p>
                             </div>
                         </a>
                     </li>
@@ -339,8 +339,8 @@
                 <!--Start single tab content-->
                 <div class="inner-box tab-pane fade active" id="history">
                     <div class="sec-title">
-                        <p>Welcome to Industry Press</p>
-                        <h1>Our History</h1>
+                        <p>Welcome to SGRT</p>
+                        <h1>Milestones</h1>
                     </div>
                     <div class="accordion-box">
                         <!--Start single accordion box-->
@@ -390,14 +390,14 @@
                     </div>
                     <div class="single-team-member">
                         <div class="img-holder">
-                            <img src="img/team/1.jpg" alt="Awesome Image">
+                            <img src="img/team/arul-image.png" alt="Awesome Image">
                             <div class="overlay-box">
                                 <div class="box">
                                     <div class="content">
                                         <ul class="member-social-links">
-                                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                                            <li><a href="https://www.linkedin.com/in/arul-jayachandran-sanjeevi-30382a102/?originalSubdomain=in" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                                            <li><a href="#"><i class="flaticon-earth-grid" aria-hidden="true"></i></a></li>
+                                            <li><a href="mail:aruls@civil.iitm.ac.in"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                                             </li>
                                         </ul>
                                     </div>
@@ -405,12 +405,14 @@
                             </div>
                         </div>
                         <div class="text-holder">
-                            <h5>CEO & Founder</h5>
-                            <h3>simon Charley</h3>
-                            <p>How this mistaken idea denouncing great explorer</p>
+                            <!-- <h5>CEO & Founder</h5> -->
+                            <h3>Arul Jayachandran S.</h3>
+                            <p>STR 403, Dept. of Civil Engineering
+                                Indian Institute of Technology Madras
+                                Chennai, TN 600036, India</p>
                             <ul>
-                                <li><span>Tel:</span>876-00-486-12</li>
-                                <li><span>Mail:</span>Simon@Industrypress.com</li>
+                                <li><span>Tel:</span>+91 44 2257 4292</li>
+                                <li><span>Mail:</span>aruls@civil.iitm.ac.in</li>
                             </ul>
                         </div>
                     </div>
@@ -548,8 +550,8 @@
                                 <span class="flaticon-nature"></span>
                             </div>
                             <div class="text">
-                                <h3>Research & consultancy on Structural Glass at IITM</h3>
-                                <p>Structural Engineering Laboratory, IITM, has carried out testing, research and
+                                <h3>Research & consultancy on Structural Glass at IIT-M</h3>
+                                <p>Structural Engineering Laboratory, IIT-M, has carried out testing, research and
                                     development activities.</p>
                             </div>
                         </div>
@@ -743,7 +745,7 @@
     <section class="brand-area">
         <div class="container">
             <div class="sec-title center text-center">
-                <h1>Our Customers</h1>
+                <h1>Major Client</h1>
             </div>
             <div class="row">
                 <div class="col-md-12">
@@ -801,19 +803,18 @@
                             <p>Get In Touch</p>
                             <h1>Queries</h1>
                         </div>
-                        <form action="http://st.ourhtmldemo.com/new/indusrty-press/inc/sendemail.php"
-                            class="contact-form">
+                        <form class="contact-form">
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="input-field">
-                                                <input type="text" name="name" placeholder="Your Name*">
+                                                <input type="text" name="name" id="name" placeholder="Your Name*">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="input-field">
-                                                <input type="text" name="mail" placeholder="Email Address*">
+                                                <input type="text" name="mail" id="mail" placeholder="Email Address*">
                                             </div>
                                         </div>
                                     </div>
@@ -822,11 +823,11 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="input-field">
-                                                <input type="text" name="phnumber" placeholder="Phone Num">
+                                                <input type="text" name="phnumber" id="phnumber"  placeholder="Phone Number">
                                             </div>
                                         </div>
                                         <div class="col-md-6">
-                                            <select class="selectmenu">
+                                            <select class="selectmenu" id="glasstype">
                                                 <option selected="selected">Select Glass Type</option>
                                                 <option value="float-glass">Float Glass</option>
                                                 <option value="heat-strengthened-glass">Heat Strengthened Glass</option>
@@ -838,10 +839,10 @@
                                     </div>
                                 </div>
                                 <div class="col-md-12">
-                                    <textarea name="message" placeholder="Write Your Needs..."></textarea>
+                                    <textarea name="message" id="message" placeholder="Write Your Needs..."></textarea>
                                 </div>
                                 <div class="col-md-12">
-                                    <button class="thm-btn yellow-bg" type="submit">Submit Now</button>
+                                    <button class="thm-btn yellow-bg" type="submit" click="query_submit()">Submit Now</button>
                                 </div>
                             </div>
                         </form>
@@ -861,13 +862,13 @@
                     <div class="single-footer-widget pd-bottom">
                         <div class="footer-logo">
                             <a href="index.html">
-                                <img src="img/footer/footer-logo.png" alt="Awesome Footer Logo">
+                                <img src="img/project/logo.jpeg" alt="Awesome Footer Logo">
                             </a>
                         </div>
                         <div class="industry-info">
                             <p class="text-justify">Structural Glass Research and Testing (SGRT) Facility, a joint
                                 initiative of Indian
-                                Institute of Technology (IITM) and Glazing Society of India (GSI) is an advanced, first
+                                Institute of Technology (IIT-M) and Glazing Society of India (GSI) is an advanced, first
                                 of its kind facility established at the Structural Engineering laboratory, Department of
                                 Civil Engineering in IIT Madras, Chennai, India.</p>
                         </div>
@@ -1033,6 +1034,47 @@
 
     <!-- thm custom script -->
     <script src="js/custom.js"></script>
+
+    <script>
+        function query_submit() {
+            // $("#loader").show();
+            // $('#exampleModal').modal('hide');
+            var name = document.getElementById('name');
+            var mail = document.getElementById('mail');
+            var mobileNumber = document.getElementById('phnumber');
+            var glassType = document.getElementById('glassType');
+            var message = document.getElementById('message');
+            var data = {
+                "name": name,
+                "mail": mail,
+                "mobileNumber": mobileNumber,
+                "glassType": glassType,
+                "message": message
+            };
+
+            $.ajax({
+                type: "POST",
+                url: 'http://localhost:3000/api/submit-query',
+                data: data,
+                dataType: "json",
+                success: function (res) {
+                    document.getElementById("name").value = '';
+                    document.getElementById("name").value = '';
+                    document.getElementById("phnumber").value = '';
+                    document.getElementById("glassType").value = '';
+                    document.getElementById("message").value = '';
+                    // $("#loader").hide();
+                    // if (res.result == 'Success') {
+                    //     $("#confirm").show();
+                    //     document.getElementById('text').innerHTML = 'Thanks for choosing 727 Motorcycle service. <br> Ours team will reach you soon';
+                    // } else {
+                    //     $("#confirm").show();
+                    //     document.getElementById('text').innerHTML = 'Something went went wrong ,please try again';
+                    // }
+                }
+            });
+        }
+    </script>
 
 </body>
 
