--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="logo pull-left">
                 <a href="index.html">
-                    <img src="img/resources/logo.png" alt="Awesome Logo">
+                    <img class="header-image" src="img/project/logo.png" alt="Awesome Logo">
                 </a>
                 <span class="header-heading">Structural Glass Research and Testing (SGRT) Facility </span>
             </div>
@@ -200,7 +200,7 @@
                                 <span class="flaticon-nature"></span>
                             </div>
                             <div class="text">
-                                <h3>Research & consultancy on Structural Glass at IITM</h3>
+                                <h3>Research & consultancy on Structural Glass at IIT-M</h3>
                                 <p>Structural Engineering Laboratory, IITM, has carried out testing, research and
                                     development activities.</p>
                             </div>
@@ -248,13 +248,13 @@
                     <div class="single-footer-widget pd-bottom">
                         <div class="footer-logo">
                             <a href="index.html">
-                                <img src="img/footer/footer-logo.png" alt="Awesome Footer Logo">
+                                <img src="img/project/logo.jpeg" alt="Awesome Footer Logo">
                             </a>
                         </div>
                         <div class="industry-info">
                             <p class="text-justify">Structural Glass Research and Testing (SGRT) Facility, a joint
                                 initiative of Indian
-                                Institute of Technology (IITM) and Glazing Society of India (GSI) is an advanced, first
+                                Institute of Technology (IIT-M) and Glazing Society of India (GSI) is an advanced, first
                                 of its kind facility established at the Structural Engineering laboratory, Department of
                                 Civil Engineering in IIT Madras, Chennai, India.</p>
                         </div>
