Image update major testing, API intergartion in Submit Query

--- a/about.html
+++ b/about.html
@@ -26,27 +26,17 @@
                 <a href="index.html">
                     <img class="header-image" src="img/project/logo.png" alt="Awesome Logo">
                 </a>
-                <span class="header-heading">Structural Glass Research and Testing (SGRT) Facility </span>
+                <span class="header-heading">Structural Glass Research and Testing Facility </span>
             </div>
             <div class="top-info pull-right">
                 <ul>
-                    <!-- <li class="single-info-box">
-                        <div class="icon-holder">
-                            <span class="flaticon-earth-grid"></span>
-                        </div>
-                        <div class="text-holder">
-                            <p><span>Address:</span> 20c Factory Street,<br>Newyork, NY 10205</p>
-                        </div>
-                    </li> -->
                     <li class="single-info-box">
-                        <!-- <div class="icon-holder">
-                            <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
-                        </div> -->
                         <div class="text-holder">
-                            <p><span>Call Us:</span> +(91) 94445 35309 <br><span>Mail Us:</span> sgrt.iitm@gmail.com</p>
-                        </div>
+                            <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
+                            <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a> </li>
+                         </div>
                     </li>
-                </ul>
+                 </ul>
             </div>
         </div>
     </header>
@@ -78,50 +68,12 @@
                                             <li><a href="training-industrial-visit-awareness.html">Training</a></li>
                                         </ul>
                                     </li>
-                                    <!-- <li class="dropdown"><a href="projects.html">Projects</a>
-                                        <ul>
-                                            <li><a href="projects.html">Project Gallery</a></li>
-                                            <li><a href="project-single.html">Project Single</a></li>
-                                        </ul>
-                                    </li> -->
-                                    <!-- <li class="dropdown"><a href="news.html">News</a>
-                                        <ul>
-                                            <li><a href="news.html">News Default</a></li>
-                                            <li><a href="news-single.html">News Single</a></li>
-                                        </ul>
-                                    </li> -->
-                                    <!-- <li class="dropdown"><a href="shop.html">Shop</a>
-                                        <ul>
-                                            <li><a href="shop.html">Shop With Sidebar</a></li>
-                                            <li><a href="shop-single.html">Shop Single</a></li>
-                                            <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                            <li><a href="checkout.html">Checkout Page</a></li>
-                                            <li><a href="account.html">My Account</a></li>
-                                        </ul>
-                                    </li> -->
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
                             </div>
                         </nav>
-                        <!-- <div class="top-search-box pull-right">
-                            <button><i class="fa fa-search"></i></button>
-                            <ul class="search-box">
-                                <li>
-                                    <form action="#">
-                                        <input type="text" placeholder="Search for something...">
-                                        <button type="submit"><i class="fa fa-search"></i></button>
-                                    </form>
-                                </li>
-                            </ul>
-                        </div> -->
                     </div>
                 </div>
-                <!-- <div class="col-md-2 col-sm-12 col-xs-3">
-                    <div class="quote-button">
-                        <a class="thm-btn yellow-bg" href="#"><i class="fa fa-share" aria-hidden="true"></i>Get a
-                            Quote</a>
-                    </div>
-                </div> -->
             </div>
         </div>
     </section>
@@ -386,10 +338,6 @@
 
     <!-- thm custom script -->
     <script src="js/custom.js"></script>
-
-
-
-
 
 
 </body>
