--- a/research-consultancy.html
+++ b/research-consultancy.html
@@ -26,19 +26,17 @@
                 <a href="index.html">
                     <img class="header-image" src="img/project/logo.png" alt="Awesome Logo">
                 </a>
-                <span class="header-heading">Structural Glass Research and Testing (SGRT) Facility </span>
+                <span class="header-heading">Structural Glass Research and Testing Facility </span>
             </div>
             <div class="top-info pull-right">
                 <ul>
                     <li class="single-info-box">
-                        <!-- <div class="icon-holder">
-                            <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
-                        </div> -->
                         <div class="text-holder">
-                            <p><span>Call Us:</span> +(91) 94445 35309 <br><span>Mail Us:</span> sgrt.iitm@gmail.com</p>
-                        </div>
+                            <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
+                            <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a> </li>
+                         </div>
                     </li>
-                </ul>
+                 </ul>
             </div>
         </div>
     </header>
@@ -134,7 +132,8 @@
                                                     <p class="text-justify">Research study on “Structural glass as a
                                                         building material in Indian high rise buildings”</p>
                                                     <div class="mt-1 text-center">
-                                                        <img src="img/project/Structural-Glass.jpg" style="height: 250px;">
+                                                        <img src="img/project/Structural-Glass.jpg"
+                                                            style="height: 250px;">
                                                     </div>
                                                     <br>
                                                     <p class="text-justify">India has taken the lead role among the
@@ -163,7 +162,7 @@
                                                         the glass and glazing system to the building is swifter since
                                                         most of the systems are completed in the factory level,
                                                         maintaining the quality throughout the process.</p>
-                                                 
+
                                                     <i class="mt-1">A real world building selected for research </i>
                                                     <br>
                                                     <p class="text-justify mt-1"><b>Reduction of dead weight:</b> Dead
@@ -593,12 +592,6 @@
                                 of its kind facility established at the Structural Engineering laboratory, Department of
                                 Civil Engineering in IIT Madras, Chennai, India.</p>
                         </div>
-                        <!-- <ul class="footer-social-links">
-                            <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
-                        </ul> -->
                     </div>
                 </div>
 
@@ -743,15 +736,8 @@
     <script src="assets/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
     <script src="assets/revolution/js/extensions/revolution.extension.video.min.js"></script>
 
-
-
     <!-- thm custom script -->
     <script src="js/custom.js"></script>
-
-
-
-
-
 
 </body>
 
