--- a/testing-facilities.html
+++ b/testing-facilities.html
@@ -26,19 +26,17 @@
                 <a href="index.html">
                     <img class="header-image" src="img/project/logo.png" alt="Awesome Logo">
                 </a>
-                <span class="header-heading">Structural Glass Research and Testing (SGRT) Facility </span>
+                <span class="header-heading">Structural Glass Research and Testing Facility </span>
             </div>
             <div class="top-info pull-right">
                 <ul>
                     <li class="single-info-box">
-                        <!-- <div class="icon-holder">
-                            <span class="flaticon-email-envelope-back-symbol-on-phone-screen"></span>
-                        </div> -->
                         <div class="text-holder">
-                            <p><span>Call Us:</span> +(91) 94445 35309 <br><span>Mail Us:</span> sgrt.iitm@gmail.com</p>
-                        </div>
+                            <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
+                            <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a> </li>
+                         </div>
                     </li>
-                </ul>
+                 </ul>
             </div>
         </div>
     </header>
@@ -153,6 +151,10 @@
                                     </a>
                                 </li>
                             </ul>
+                            <div class="button">
+                                <a class="thm-btn yellow-bg" href="https://www.glazingsociety.com/"
+                                    target="_blank">Custom Testing</a>
+                            </div>
                             <div class="button">
                                 <a class="thm-btn yellow-bg" href="#" target="_blank">Apply For Testing</a>
                             </div>
@@ -506,12 +508,6 @@
                                 of its kind facility established at the Structural Engineering laboratory, Department of
                                 Civil Engineering in IIT Madras, Chennai, India.</p>
                         </div>
-                        <!-- <ul class="footer-social-links">
-                            <li><a href="#"><i aria-hidden="true" class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i aria-hidden="true" class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i aria-hidden="true" class="fa fa-linkedin"></i></a></li>
-                        </ul> -->
                     </div>
                 </div>
 
@@ -656,8 +652,6 @@
     <script src="assets/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
     <script src="assets/revolution/js/extensions/revolution.extension.video.min.js"></script>
 
-
-
     <!-- thm custom script -->
     <script src="js/custom.js"></script>
 
@@ -676,10 +670,6 @@
             }
         }
     </script>
-
-
-
-
 
 
 </body>
