--- a/index.html
+++ b/index.html
@@ -983,7 +983,7 @@
 
             $.ajax({
                 type: "POST",
-                url: 'http://localhost:3000/api/submit-query',
+                url: 'https://sgrt-lab.herokuapp.com/api/submit-query',
                 data: data,
                 dataType: "json",
                 success: function (res) {
