--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
                                             <li><a href="research-consultancy.html">Research & Consultancy</a></li>
-                                            <li><a href="training-industrial-visit-awareness.html">Training</a></li>
+                                            <li><a href="training-industrial-visit-awareness.html">Training, Industrial Visit and Awareness</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">Contact</a></li>
@@ -114,7 +114,7 @@
                             <p>Welcome to SGRT</p>
                             <h1>About Us</h1>
                         </div>
-                        <h3>We are providing good services to our valuable customers</h3>
+                        <!-- <h3>We are providing good services to our valuable customers</h3> -->
                         <p class="text-justify">
                             Structural Engineering Laboratory, IIT-M, has carried out testing, research and
                             development
@@ -149,7 +149,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>We are the world class engineering manufacturer providing<br> the highest quality products.</h1>
+                    <!-- <h1>We are the world class engineering manufacturer providing<br> the highest quality products.</h1> -->
                     <a class="thm-btn yellow-bg" href="services.html">Our services</a>
                 </div>
             </div>
