--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
                                             <li><a href="research-consultancy.html">Research & Consultancy</a></li>
-                                            <li><a href="training-industrial-visit-awareness.html">Training</a></li>
+                                            <li><a href="training-industrial-visit-awareness.html">Training, Industrial Visit and Awareness</a></li>
                                         </ul>
                                     </li>
                                     <li class="current"><a href="contact.html">Contact</a></li>
