--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
                                             <li><a href="research-consultancy.html">Research & Consultancy</a></li>
-                                            <li><a href="training-industrial-visit-awareness.html">Training</a></li>
+                                            <li><a href="training-industrial-visit-awareness.html">Training, Industrial Visit & Awareness</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">Contact</a></li>
@@ -196,7 +196,7 @@
                             </div>
                             <div class="content">
                                 <h2>About Us</h2>
-                                <p>Company Overview</p>
+                                <!-- <p>Company Overview</p> -->
                             </div>
                         </a>
                     </li>
@@ -206,8 +206,8 @@
                                 <span class="flaticon-sign"></span>
                             </div>
                             <div class="content">
-                                <h2>Milestones</h2>
-                                <p>Future Goals</p>
+                                <h2>Future Goals</h2>
+                                <!-- <p>Future Goals</p> -->
                             </div>
                         </a>
                     </li>
@@ -218,7 +218,7 @@
                             </div>
                             <div class="content">
                                 <h2>Faculty</h2>
-                                <p>Processing & Develop</p>
+                                <!-- <p>Processing & Develop</p> -->
                             </div>
                         </a>
                     </li>
@@ -236,6 +236,9 @@
                             construction sector and
                             academic institutions with complete testing facilities for determining, understanding and
                             analyzing the structural characteristics of Glass and Glazing products.</p>
+                            <div class="button">
+                                <a style="padding: 10px;" class="thm-btn yellow-bg" href="about.html">Read More</a>
+                            </div>
                     </div>
                     <!-- <div class="fact-counter">
                         <ul>
@@ -265,10 +268,9 @@
                 </div>
                 <!--End single tab content-->
                 <!--Start single tab content-->
-                <div class="inner-box tab-pane fade active" id="history">
+                <div class="inner-box tab-pane fade active" style="overflow-y: scroll; height: 300px;" id="history">
                     <div class="sec-title">
-                        <p>Welcome to SGRT</p>
-                        <h1>Milestones</h1>
+                        <h1>Future Goals</h1>
                     </div>
                     <div class="accordion-box">
                         <!--Start single accordion box-->
@@ -314,7 +316,6 @@
                 <!--Start single tab content-->
                 <div class="inner-box tab-pane fade active" id="process">
                     <div class="sec-title">
-                        <p>Processing System</p>
                         <h1>FACULTY</h1>
                     </div>
                     <div class="single-team-member">
