--- a/testing-facilities.html
+++ b/testing-facilities.html
@@ -32,12 +32,13 @@
                 <ul>
                     <li class="single-info-box">
                         <div class="text-holder">
-                            <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
-                            <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a> </li>
-                         </div>
+                    <li><span>Tel:</span><a target="_blank" href="tel:919444535309"> +91 94445 35309</a></li>
+                    <li><span>Mail:</span><a target="_blank" href="mailto:sgrt.iitm@gmail.com"> sgrt.iitm@gmail.com</a>
                     </li>
-                 </ul>
             </div>
+            </li>
+            </ul>
+        </div>
         </div>
     </header>
     <!--End header area-->
@@ -65,7 +66,7 @@
                                         <ul>
                                             <li><a href="testing-facilities.html">Testing Facilities</a></li>
                                             <li><a href="research-consultancy.html">Research & Consultancy</a></li>
-                                            <li><a href="training-industrial-visit-awareness.html">Training</a></li>
+                                            <li><a href="training-industrial-visit-awareness.html">Training, Industrial Visit and Awareness</a></li>
                                         </ul>
                                     </li>
                                     <li><a href="contact.html">Contact</a></li>
@@ -152,11 +153,12 @@
                                 </li>
                             </ul>
                             <div class="button">
-                                <a class="thm-btn yellow-bg" href="https://www.glazingsociety.com/"
-                                    target="_blank">Custom Testing</a>
+                                <a class="thm-btn yellow-bg" href="https://www.glazingsociety.com/testingservices.php"
+                                    target="_blank">Apply For Testing</a>
                             </div>
                             <div class="button">
-                                <a class="thm-btn yellow-bg" href="#" target="_blank">Apply For Testing</a>
+                                <a class="thm-btn yellow-bg" href="contact.html"
+                                    >Enquire For Custom Testing</a>
                             </div>
                         </div>
                         <!--End single sidebar item-->
